--- a/example/index.html
+++ b/example/index.html
@@ -124,10 +124,11 @@
 				// ............................................................ pass code string >> returns err object
 				// err.message 	// plain text error message
 				// err.html 	// html formatted error message
+				// err.line 	// the line number where the error was found
 				// err.code 	// the html string starting from the point where the error was found
 
 				if( !err.html ) output.innerHTML = "error free!";
-				else output.innerHTML = err.html;
+				else output.innerHTML = '<span style="color:red">LINE:'+err.line+":</span> "+ err.html;
 			}
 
 
